--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1824,6 +1824,7 @@ section {
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
 .hero {
   overflow-x: hidden;
   padding: 0;
@@ -1921,6 +1922,8 @@ section {
 .hero .carousel-control-prev {
   justify-content: start;
 }
+
+
 
 @media (min-width: 640px) {
   .hero .carousel-control-prev {
@@ -2666,3 +2669,35 @@ section {
         -webkit-line-clamp: 3; /* Number of lines to show */
         -webkit-box-orient: vertical;
     }
+
+
+    /*--------------------------------------------------------------
+# Clients
+--------------------------------------------------------------*/
+.clients .clients-wrap {
+  border-top: 1px solid #ececec;
+  border-left: 1px solid #ececec;
+}
+
+.clients .client-logo {
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+  overflow: hidden;
+  background: #fff;
+  height: 100px;
+}
+
+.clients .client-logo img {
+  transition: all 0.3s ease-in-out;
+  height: 36px;
+  filter: grayscale(100%);
+}
+
+.clients .client-logo:hover img {
+  filter: none;
+  transform: scale(1.1);
+}
