--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -9,7 +9,7 @@
 /* Colors */
 :root {
   --color-default: #364d59;
-  --color-primary: #feb900;
+  --color-primary: #198754;
   --color-secondary: #52565e;
 }
 
